# video_generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pyinstaller.yml
src/: main.py
