[tool.poetry]
name = "video-generator"
version = "0.1.0"
description = "Combines images and audio to create a video"
authors = ["1blckhrt <williams.1691@wright.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.13.1"
pillow = "^11.0.0"
moviepy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
