[project]
name = "video-generator"
version = "0.1.0"
description = "Combines images and audio to create a video"
authors = ["1blckhrt <williams.1691@wright.edu>"]
readme = "README.md"
dependencies = [
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.2.1",
    "pillow>=11.3.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]


